fixed alignment problem with the main text

--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,6 @@ a:hover {
 }
 
 article {
-  grid-column: 2/3;
   display: grid;
   grid-gap: 15px;
 }
@@ -86,10 +85,6 @@ article {
   align-self: end;
   padding-top: 40px;
   padding-bottom: 10px;
-}
-
-.main_text {
-  margin-left: 100px;
 }
 
 #main_picture {
